crates/polychem/src/moieties/snapshots/polychem__moieties__polymer_database__tests__parse_bond_with_null_lost.snap
---
source: crates/polychem/src/moieties/polymer_database.rs
description: bonds
expression: out
---
  × error parsing KDL

Error: 
  × expected string scalar, found null
   ╭─[test:4:10]
 3 │     to "Hydroxyl" at="Nonreducing End"
 4 │     lost null
   ·          ──┬─
   ·            ╰── unexpected null
 5 │ }
   ╰────
